hover issue on small devices adjusted

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -25,7 +25,6 @@
 }
 
 .app__navbar-download {
-  background-color: var(--primary-color);
   margin-top: 0.5rem;
   border-radius: 0.6rem;
   padding: 0.3rem 0.8rem;
